[project]
name = "weather-cli"
version = "0.1.0"
description = "A tiny command-line weather tool."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ankit Adhikari", email = "ankitadhikari31512@gmail.com" }]
dependencies = [
    "requests>=2.31",
]

[project.scripts]
weather = "weather_cli.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"